--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,6 +7,7 @@
 }
 
 :root {
+    --cor:  #ebe5c5;
     --cor1: #2E3192;
     --cor2: #0000FF;
     --cor3: #9EEDFC;
@@ -22,29 +23,46 @@
     --cor10: #16A085; 
     /* link com hover */
     --cor11: #0A3D62;
+
 }
 
 
 
 body {
-    background-color: var(--cor6);
+    background-color: var(--cor0);
     color: var(--cor7);
 }
 
 header {
-    background-color: var(--cor8);
+    background-image: linear-gradient(to bottom, var(--cor5), var(--cor7));
     color: var(--cor9);
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 20px;
 }
 
 nav {
-
+    background-color: var(--cor7);
+    padding: 5px;
 }
 
 nav > a {
-    color: var(--cor10);
+    color: var(--cor9);
     text-decoration: none;
+    padding: 5px;
 }
 
 a:hover {
-    color: var(--cor11);
+    background-color: var(--cor5);
+    border-radius: 5px;
+
+}
+
+main {
+    min-width: 300px;
+    max-width: 1000px;
+    margin: auto;
+    margin-bottom: 30px;
+    padding: 20px;
+    background-color: white;
 }
